@@ -22,21 +22,14 @@
 #if !defined( _LIBFDATETIME_TYPES_H )
 #define _LIBFDATETIME_TYPES_H
 
-#if @HAVE_SYS_TYPES_H@ || defined( HAVE_SYS_TYPES_H )
-#include <sys/types.h>
-
-#else
-#error Missing system type definitions (sys/types.h)
-#endif
-
-/* Type definitions for the Microsoft Visual Studio C++ compiler
+/* Microsoft C/C++ compiler
  */
 #if defined( _MSC_VER )
 
-/* Define LIBFDATETIME_DEFINITION_INTEGER_TYPES to avoid conflict
+/* Define _LIBFDATETIME_TYPES_H_INTEGERS to avoid conflict
  */
-#if !defined( LIBFDATETIME_DEFINITION_INTEGER_TYPES )
-#define LIBFDATETIME_DEFINITION_INTEGER_TYPES
+#if !defined( _LIBFDATETIME_TYPES_H_INTEGERS )
+#define _LIBFDATETIME_TYPES_H_INTEGERS
 
 #ifdef __cplusplus
 extern "C" {
@@ -65,15 +58,17 @@ typedef __int32			ssize_t;
 }
 #endif
 
-#endif /* LIBFDATETIME_DEFINITION_INTEGER_TYPES */
+#endif /* !defined( _LIBFDATETIME_TYPES_H_INTEGERS ) */
 
+/* Borland C/C++ compiler
+ */
 #elif defined( __BORLANDC__ )
 #if __BORLANDC__ <= 0x0560
 
-/* Define LIBFDATETIME_DEFINITION_INTEGER_TYPES to avoid conflict
+/* Define _LIBFDATETIME_TYPES_H_INTEGERS to avoid conflict
  */
-#if !defined( LIBFDATETIME_DEFINITION_INTEGER_TYPES )
-#define LIBFDATETIME_DEFINITION_INTEGER_TYPES
+#if !defined( _LIBFDATETIME_TYPES_H_INTEGERS )
+#define _LIBFDATETIME_TYPES_H_INTEGERS
 
 #ifdef __cplusplus
 extern "C" {
@@ -104,16 +99,27 @@ typedef unsigned __int32	intptr_t;
 }
 #endif
 
-#endif /* LIBFDATETIME_DEFINITION_INTEGER_TYPES */
+#endif /* !defined( _LIBFDATETIME_TYPES_H_INTEGERS ) */
 
 #else
 #include <stdint.h>
 #endif /* __BORLANDC__ <= 0x0560 */
 
+/* Other compilers
+ */
+#else
+
+#if @HAVE_SYS_TYPES_H@ || defined( HAVE_SYS_TYPES_H )
+#include <sys/types.h>
+
+#else
+#error Missing system type definitions (sys/types.h)
+#endif
+
 /* Type definitions for compilers that have access to
  * <inttypes.h> or <stdint.h>
  */
-#elif @HAVE_INTTYPES_H@ || defined( HAVE_INTTYPES_H )
+#if @HAVE_INTTYPES_H@ || defined( HAVE_INTTYPES_H )
 #include <inttypes.h>
 
 #elif @HAVE_STDINT_H@ || defined( HAVE_STDINT_H )
@@ -122,6 +128,8 @@ typedef unsigned __int32	intptr_t;
 #else
 #error Missing integer type definitions (inttypes.h, stdint.h)
 #endif
+
+#endif /* Compiler specific integer type definitions */
 
 #ifdef __cplusplus
 extern "C" {
