@@ -51,61 +51,69 @@ struct libfdatetime_internal_fat_date_time
 	uint16_t time;
 };
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_initialize(
-                         libfdatetime_fat_date_time_t **fat_date_time,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_initialize(
+     libfdatetime_fat_date_time_t **fat_date_time,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_free(
-                         libfdatetime_fat_date_time_t **fat_date_time,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_free(
+     libfdatetime_fat_date_time_t **fat_date_time,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_copy_from_byte_stream(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         uint8_t *byte_stream,
-                         size_t byte_stream_size,
-                         uint8_t byte_order,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_copy_from_byte_stream(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     const uint8_t *byte_stream,
+     size_t byte_stream_size,
+     uint8_t byte_order,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_copy_from_uint32(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         uint32_t value_32bit,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_copy_from_uint32(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     uint32_t value_32bit,
+     liberror_error_t **error );
 
 int libfdatetime_fat_dat_time_copy_to_date_time_values(
      libfdatetime_internal_fat_date_time_t *internal_fat_date_time,
      libfdatetime_date_time_values_t *date_time_values,
      liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_get_string_size(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         size_t *string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_get_string_size(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     size_t *string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_copy_to_utf8_string(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         uint8_t *utf8_string,
-                         size_t utf8_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_copy_to_utf8_string(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_copy_to_utf16_string(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         uint16_t *utf16_string,
-                         size_t utf16_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_copy_to_utf16_string(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_fat_date_time_copy_to_utf32_string(
-                         libfdatetime_fat_date_time_t *fat_date_time,
-                         uint32_t *utf32_string,
-                         size_t utf32_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_fat_date_time_copy_to_utf32_string(
+     libfdatetime_fat_date_time_t *fat_date_time,
+     uint32_t *utf32_string,
+     size_t utf32_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
 #if defined( __cplusplus )
 }
