@@ -171,7 +171,7 @@ int libfdatetime_filetime_add(
  */
 int libfdatetime_filetime_copy_from_byte_stream(
      libfdatetime_filetime_t *filetime,
-     uint8_t *byte_stream,
+     const uint8_t *byte_stream,
      size_t byte_stream_size,
      uint8_t byte_order,
      liberror_error_t **error )
