@@ -50,66 +50,75 @@ struct libfdatetime_internal_filetime
 	uint32_t upper;
 };
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_initialize(
-                         libfdatetime_filetime_t **filetime,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_initialize(
+     libfdatetime_filetime_t **filetime,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_free(
-                         libfdatetime_filetime_t **filetime,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_free(
+     libfdatetime_filetime_t **filetime,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_add(
-                         libfdatetime_filetime_t *filetime,
-                         libfdatetime_filetime_t *additional_filetime,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_add(
+     libfdatetime_filetime_t *filetime,
+     libfdatetime_filetime_t *additional_filetime,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_byte_stream(
-                         libfdatetime_filetime_t *filetime,
-                         uint8_t *byte_stream,
-                         size_t byte_stream_size,
-                         uint8_t byte_order,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_copy_from_byte_stream(
+     libfdatetime_filetime_t *filetime,
+     const uint8_t *byte_stream,
+     size_t byte_stream_size,
+     uint8_t byte_order,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_64bit(
-                         libfdatetime_filetime_t *filetime,
-                         uint64_t value_64bit,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_copy_from_64bit(
+     libfdatetime_filetime_t *filetime,
+     uint64_t value_64bit,
+     liberror_error_t **error );
 
 int libfdatetime_filetime_copy_to_date_time_values(
      libfdatetime_internal_filetime_t *internal_filetime,
      libfdatetime_date_time_values_t *date_time_values,
      liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_get_string_size(
-                         libfdatetime_filetime_t *filetime,
-                         size_t *string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_get_string_size(
+     libfdatetime_filetime_t *filetime,
+     size_t *string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_to_utf8_string(
-                         libfdatetime_filetime_t *filetime,
-                         uint8_t *utf8_string,
-                         size_t utf8_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_copy_to_utf8_string(
+     libfdatetime_filetime_t *filetime,
+     uint8_t *utf8_string,
+     size_t utf8_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_to_utf16_string(
-                         libfdatetime_filetime_t *filetime,
-                         uint16_t *utf16_string,
-                         size_t utf16_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_copy_to_utf16_string(
+     libfdatetime_filetime_t *filetime,
+     uint16_t *utf16_string,
+     size_t utf16_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_to_utf32_string(
-                         libfdatetime_filetime_t *filetime,
-                         uint32_t *utf32_string,
-                         size_t utf32_string_size,
-                         uint8_t string_format_flags,
-                         int date_time_format,
-                         liberror_error_t **error );
+LIBFDATETIME_EXTERN \
+int libfdatetime_filetime_copy_to_utf32_string(
+     libfdatetime_filetime_t *filetime,
+     uint32_t *utf32_string,
+     size_t utf32_string_size,
+     uint8_t string_format_flags,
+     int date_time_format,
+     liberror_error_t **error );
 
 #if defined( __cplusplus )
 }
